Cell-spacing fixed. Main content restructured from table to form; form needs layout work.

--- a/project01/proj1style.css
+++ b/project01/proj1style.css
@@ -12,7 +12,6 @@ td {
 	line-height: 24px;
 	color: #000;
 	text-align:left;
-	padding: 10;
 	vertical-align:top;
 }
 
@@ -39,7 +38,7 @@ a {
 }
 
 form {
-	background-color: #CCCC99;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .article {
